PROTON-587: Fails to compile Visual Studio 2008 This fix provides a definition for size_t in that compiler suite.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1598084 13f79535-47bb-0310-9956-ffa450edef68